RESOLVED FIXED28318
Failed assertion when bringing up Safari's error console
https://bugs.webkit.org/show_bug.cgi?id=28318
Summary Failed assertion when bringing up Safari's error console
Andrew Wilson
Reported 2009-08-14 14:34:13 PDT
Run safari bring up the error console (via the Develop menu) Get the following failed assertion: ASSERTION FAILED: m_clients.contains(renderer) (WebCore/css/CSSGradientValue.cpp:109 virtual WebCore::Image* WebCore::CSSGradientValue::image(WebCore::RenderObject*, const WebCore::IntSize&))
Attachments
Patch (5.01 KB, patch)
2009-08-14 18:08 PDT, Simon Fraser (smfr)
hyatt: review+
Simon Fraser (smfr)
Comment 1 2009-08-14 18:08:56 PDT
Created attachment 34882 [details] Patch I tried hard to get a testcase, but was not able to reproduce the problem.
Dave Hyatt
Comment 2 2009-08-14 18:13:25 PDT
Comment on attachment 34882 [details] Patch r=me
Simon Fraser (smfr)
Comment 3 2009-08-14 18:15:07 PDT
Note You need to log in before you can comment on or make changes to this bug.